@@ -1,3 +1,7 @@
+2008-07-24  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Clean up debug output in highlevel lib
+
 2008-07-10  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.8.0-pre1
